add annotations for notification handler
